--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="my_primary">#F81414</color>
+    <color name="my_secondary">#11A6EA</color>
+    <color name="my_statusbar">#0FF319</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_text">#0EAAF1</color>
+
 </resources>
